# codeatlas

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codeatlas/: cli.py  config.py
codeatlas/graph/: callgraph.py  dependency.py  mermaid.py
codeatlas/indexer/: indexer.py  parser.py  resolver.py
codeatlas/scanner/: scanner.py
codeatlas/storage/: models.py  queries.py  schema.py
tests/: test_config.py  test_parser.py  test_queries.py  test_scanner.py
